<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    tools:context=".MainActivity_Dangnhap">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20sp"
            android:layout_marginRight="20sp"
            android:orientation="vertical">

            <ImageButton

                android:id="@+id/kho"
                android:layout_width="140dp"
                android:layout_height="120dp"
                android:background="@null"
                android:scaleType="fitXY"
                android:src="@drawable/kho"></ImageButton>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/kho"
                android:layout_marginTop="10dp"
                android:textColor="@android:color/holo_orange_dark"
                android:textSize="20sp">

            </TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20sp"
            android:layout_marginRight="20sp"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/vattu"
                android:layout_width="140dp"
                android:layout_height="120dp"
                android:background="@null"
                android:scaleType="fitXY"
                android:src="@drawable/vattu"></ImageButton>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/vattu"
                android:layout_marginTop="10dp"
                android:textColor="@android:color/holo_orange_dark"
                android:textSize="20sp">

            </TextView>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="60dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20sp"
            android:layout_marginRight="20sp"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/phieunhap"
                android:background="@null"
                android:layout_width="140dp"
                android:layout_height="120dp"
                android:scaleType="fitXY"
                android:src="@drawable/phieunhap"></ImageButton>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/phieunhap"
                android:layout_marginTop="10dp"
                android:textColor="@android:color/holo_orange_dark"
                android:textSize="20sp">

            </TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20sp"
            android:layout_marginRight="20sp"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/phieuxuat"
                android:background="@null"
                android:layout_width="140dp"
                android:layout_height="120dp"
                android:scaleType="fitXY"
                android:src="@drawable/phieuxuat"></ImageButton>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/phieuxuat"
                android:layout_marginTop="10dp"
                android:textColor="@android:color/holo_orange_dark"
                android:textSize="20sp">

            </TextView>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="60dp"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/baocao"
            android:background="@null"
            android:layout_width="140dp"
            android:layout_height="120dp"
            android:scaleType="fitXY"
            android:src="@drawable/baocao"></ImageButton>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/baocao"
            android:layout_marginTop="10dp"
            android:textColor="@android:color/holo_orange_dark"
            android:textSize="20sp">

        </TextView>
    </LinearLayout>



</LinearLayout>